added icons and hover colors

--- a/index.html
+++ b/index.html
@@ -98,8 +98,16 @@
 </body>
 <footer >
 	<a id="contact"></a>
-	<img class="contactIcon" src="rsrc/img/email.png" >ngkjon@gmail.com
+	
+	
+	<a href="https://github.com/ngkjon" target="_blank" title="Git"> <img class="contactIcon" src="rsrc/img/github.png" ></a>
+	<a href="https://instagram.com/ngcity" target="_blank" title="Instagram"> <img class="contactIcon" src="rsrc/img/instagram.png" ></a>
+	<a href="mailto:ngkjon@gmail.com" target="_blank" title="Email"><img class="contactIcon" src="rsrc/img/email.png" ></a>
+	<br>
+	Jonathan Ng
+	<br>
+	(647) 967-3035
+	
 
-	<img class="contactIcon" src="rsrc/img/phone.png" >647 967 3035
 </footer>
 </html>
