--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
 	<div id="p1">
 		<a id="about"></a>
 		
-		<h1 style="padding-top:2%;"><img id="pic" style="background: #51B7FD;" src="rsrc/img/pic.png" > <br> About</h1>
-		My name is Jonathan Ng. I am a first year Systems Design Engineering student studying at the University of Waterloo with a passion for programming and design.
+		<h1 style="padding-top:2%;">About Me</h1>
+		<p style="font-size:200%;">
+			My name is Jonathan Ng. I am a first year Systems Design Engineering student from Toronto, studying at the University of Waterloo. I have a great passion for programming and design. 
+			I believe that the best designs are minimalistic while still easy to comprehend.
+			My hobbies and interests include fishing, anything sports, and sleeping in on weekends.
+		</p> 
 	</div>
 	<div id="p2">
 		<a id="projects"></a>
 		<h1>Projects</h1>
 		<ul id="projects">
 			<!--Project Template
+			img <img id="pic" style="background: #51B7FD;" src="rsrc/img/picto.jpg" > 
 			<li>
 				<a href="https://github.com/ngkjon/Pi-Car-Project" target="_blank" title="View repo">
 					<h1 class="header">Pi Car 07/06/16</h1>
@@ -104,7 +109,7 @@
 	<a href="https://instagram.com/ngcity" target="_blank" title="Instagram"> <img class="contactIcon" src="rsrc/img/instagram.png" ></a>
 	<a href="mailto:ngkjon@gmail.com" target="_blank" title="Email"><img class="contactIcon" src="rsrc/img/email.png" ></a>
 	<br>
-	Jonathan Ng
+	&copy; Jonathan Ng 2016
 	<br>
 	(647) 967-3035
 	
