--- a/crawlMe.html
+++ b/crawlMe.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta property="og:url"		content="ngjonathan.me/crawlMe.html"/>
+		<meta property="og:url"		content="http://www.ngjonathan.me/crawlMe.html"/>
 		<meta property="og:title"	content="mashup"/>
 		<meta property="og:description"	content="mashup generated between"/>	
 	</head>
