added video to the crawler

--- a/crawlMe.html
+++ b/crawlMe.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta property="og:url"		content="http://www.ngjonathan.me/crawlMe.html"/>
 		<meta property="og:title"	content="mashup"/>
-		<meta property="og:description"	content="mashup generated between"/>	
+		<meta property="og:description"	content="mashup generated between"/>
+		<meta property="og:video" content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"	
 	</head>
 </html>
