--- a/crawlMe.html
+++ b/crawlMe.html
@@ -2,13 +2,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta property="og:site_name">
 		<meta property="og:url"			content="http://www.ngjonathan.me/crawlMe.html"/>
 		<meta property="og:title"		content="mashup"/>
 		<meta property="og:description"	content="mashup generated between"/>
+		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>			
 		<meta property="og:type"		content="video.other"/>	
-			<meta property="og:video" 			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-			<meta property="og:video_url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-			<meta property="og:video_width"		content="960"/>
-			<meta property="og:video_height"	content="720"/>
+			<meta property="og:video:url"			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
+			<meta property="og:video:secure_url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
+			<meta property="og:video:width"			content="960"/>
+			<meta property="og:video:height"		content="720"/>
 	</head>
 </html>
