--- a/crawlMe.html
+++ b/crawlMe.html
@@ -10,7 +10,7 @@
 		<meta property="og:type"		content="video.other"/>	
 			<meta property="og:video:url"			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 			<meta property="og:video:secure_url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-			<meta property="og:video:type"			content="text/html">	
+			<meta property="og:video:type"			content="video/mp4">	
 			<meta property="og:video:width"			content="960"/>
 			<meta property="og:video:height"		content="720"/>
 	</head>
