commented otu stuff

--- a/crawlMe.html
+++ b/crawlMe.html
@@ -8,7 +8,7 @@
 		<meta property="og:title"		content="mashup"/>
 		<meta property="og:description"	content="mashup generated between"/>
 		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
-		<meta property="al:ios:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>	
+		<!--<meta property="al:ios:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>-->
 		<meta property="al:android:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>	
 		<meta property="al:web:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4">		
 		<meta property="og:type"		content="video.other"/>	
