--- a/crawlMe.html
+++ b/crawlMe.html
@@ -8,16 +8,25 @@
 		<meta property="og:title"		content="mashup"/>
 		<meta property="og:description"	content="mashup generated between"/>
 		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
-		<!--<meta property="al:ios:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>-->
-		<meta property="al:android:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>	
-		<meta property="al:web:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4">		
+		<!--	This section can be used to open up the link in the app when the support for it comes
+		<meta property="al:ios:url"				content=""/>
+		<meta property="al:ios:app_store_id"	content="929775122"
+		<meta property="al:ios:app_name"		content="Rave"
+		<meta property="al:android:url"			content=""/>
+		<meta property="al:android:app_name"	content"Rave"/>
+		-->	
+		<meta property="al:web:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>		
 		<meta property="og:type"		content="video.other"/>	
 			<meta property="og:video:url"			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 			<meta property="og:video:secure_url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 			<meta property="og:video:type"			content="video/mp4"/>	
 			<meta property="og:video:width"			content="960"/>
 			<meta property="og:video:height"		content="720"/>
-
-
+		<!-- Twitter -->
+		<meta name="twitter:card"	content="player"/>
+		<meta name="twitter:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4">
+		<meta name="twitter:title"	content="test scrape from twitter"/>
+		<meta name="twitter:description"	content="twitter scraped this"/>
+		<meta name="twitter:image"	content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/	>
 	</head>
 </html>
