--- a/crawlMe.html
+++ b/crawlMe.html
@@ -24,9 +24,12 @@
 			<meta property="og:video:height"		content="720"/>
 		<!-- Twitter -->
 		<meta name="twitter:card"	content="player"/>
-		<meta name="twitter:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4">
+		<meta name="twitter:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 		<meta name="twitter:title"	content="test scrape from twitter"/>
 		<meta name="twitter:description"	content="twitter scraped this"/>
-		<meta name="twitter:image"	content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/	>
+		<meta name="twitter:image"	content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
+		<meta name="twitter:player" content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
+		<meta name="twitter:player:width"	content="1280"/>
+		<meta name="twitter:player:height"	content="720"/>
 	</head>
 </html>
