--- a/crawlMe.html
+++ b/crawlMe.html
@@ -23,7 +23,7 @@
 			<meta property="og:video:width"			content="960"/>
 			<meta property="og:video:height"		content="720"/>
 		<!-- Twitter -->
-		<meta name="twitter:card"	content="player"/>
+		<meta name="twitter:card"	content="summary"/>
 		<meta name="twitter:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 		<meta name="twitter:title"	content="test scrape from twitter"/>
 		<meta name="twitter:description"	content="twitter scraped this"/>
