--- a/crawlMe.html
+++ b/crawlMe.html
@@ -8,6 +8,8 @@
 		<meta property="og:title"		content="mashup"/>
 		<meta property="og:description"	content="mashup generated between mashup generated betweenmashup generated betweenmashup generated betweenmashup generated betweenmashup generated betweenmashup generated betweenmashup generated between mashup generated betweenmashup generated between mashup generated betweenmashup generated betweenmashup generated betweenmashup generated between"/>
 		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
+		<meta property="og:image:width"			content="480"/>
+		<meta property="og:image:height"		content="270"/>
 		<!--	This section can be used to open up the link in the app when the support for it comes
 		<meta property="al:ios:url"				content=""/>
 		<meta property="al:ios:app_store_id"	content="929775122"
