--- a/crawlMe.html
+++ b/crawlMe.html
@@ -24,6 +24,10 @@
 			<meta property="og:video:type"			content="video/mp4"/>	
 			<meta property="og:video:width"			content="960"/>
 			<meta property="og:video:height"		content="720"/>
+		<!-- add fb app id here 
+		<meta property="og:fb_app_id"				content=""/>
+		-->
+
 		<!-- Twitter -->
 		<!-- update twitter:card => player upon approval of domain -->
 		<meta name="twitter:card"	content="player"/>
