--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- created -->
 <!DOCTYPE html>
 <html>
-
+<!--
 <title>Jonathan Ng</title>
 <link rel="stylesheet" type="text/css" href="rsrc/style/main.css"/>
 <header>
@@ -33,6 +33,7 @@
 		<a id="projects"></a>
 		<h1>Projects</h1>
 		<ul id="projects">
+		-->
 			<!--Project Template
 			img <img id="pic" style="background: #51B7FD;" src="rsrc/img/picto.jpg" > 
 			<li>
@@ -55,6 +56,7 @@
 			</p>
 		</li>
 	-->
+	<!--
 	<li>
 		<a href="https://github.com/ngkjon/Pi-Car-Project" target="_blank" title="View repo">
 			<h2 class="header">Pi Car (2016)</h2>		</a>
@@ -115,4 +117,6 @@
 	
 
 </footer>
+-->
+lmao
 </html>
