--- a/crawlMe.html
+++ b/crawlMe.html
@@ -30,7 +30,7 @@
 
 		<!-- Twitter -->
 		<!-- update twitter:card => player upon approval of domain -->
-		<meta name="twitter:card"	content="player"/>
+		<meta name="twitter:card"	content="summary"/>
 		<meta name="twitter:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 		<meta name="twitter:title"	content="test scrape from twitter"/>
 		<meta name="twitter:description"	content="twitter scraped this"/>
