twitter aproved me :)

--- a/crawlMe.html
+++ b/crawlMe.html
@@ -4,10 +4,10 @@
 	<head>
 
 		<meta property="og:site_name">
-		<meta property="og:url"			content="http://ngjonathan.me/crawlMe.html"/>
+		<meta property="og:url"			content=""/>
 		<meta property="og:title"		content="mashup"/>
-		<meta property="og:description"	content="mashup generated between mashup generated betweenmashup generated betweenmashup generated betweenmashup generated betweenmashup generated betweenmashup generated betweenmashup generated between mashup generated betweenmashup generated between mashup generated betweenmashup generated betweenmashup generated betweenmashup generated between"/>
-		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
+		<meta property="og:description"	content="mashup generated between"/>
+		<meta property="og:image"		content="thumbnail url"/>
 		<meta property="og:image:width"			content="480"/>
 		<meta property="og:image:height"		content="270"/>
 		<!--	This section can be used to open up the link in the app when the support for it comes
@@ -17,10 +17,10 @@
 		<meta property="al:android:url"			content=""/>
 		<meta property="al:android:app_name"	content"Rave"/>
 		-->	
-		<meta property="al:web:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>		
+		<meta property="al:web:url"		content="video source"/>		
 		<meta property="og:type"		content="video.other"/>	
-			<meta property="og:video:url"			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-			<meta property="og:video:secure_url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
+			<meta property="og:video:url"			content="video source"/>
+			<meta property="og:video:secure_url"	content="video source"/>
 			<meta property="og:video:type"			content="video/mp4"/>	
 			<meta property="og:video:width"			content="960"/>
 			<meta property="og:video:height"		content="720"/>
@@ -29,13 +29,13 @@
 		-->
 
 		<!-- Twitter -->
-		<!-- update twitter:card => player upon approval of domain -->
+		<!-- update twitter:card => player upon approval of domain to allow videos to play within twitter-->
 		<meta name="twitter:card"	content="summary"/>
-		<meta name="twitter:url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-		<meta name="twitter:title"	content="test scrape from twitter"/>
-		<meta name="twitter:description"	content="twitter scraped this"/>
+		<meta name="twitter:url"	content="video source"/>
+		<meta name="twitter:title"	content="mashup"/>
+		<meta name="twitter:description"	content="mashup generated between"/>
 		<meta name="twitter:image"	content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
-		
+			
 		<meta name="twitter:player" content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
 		<!--
 		<meta name="twitter:player:width"	content="1280"/>
