--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!-- created -->
 <!DOCTYPE html>
 <html>
+<head>
+	<title>reactjs test site</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+</head>
 <!--
 <title>Jonathan Ng</title>
 <link rel="stylesheet" type="text/css" href="rsrc/style/main.css"/>
@@ -118,7 +124,5 @@
 
 </footer>
 -->
-<script type="text/javascript">
-	alert("hello world");
-</script>
+<script src="js/home.js"</script>
 </html>
