--- a/crawlMe.html
+++ b/crawlMe.html
@@ -8,8 +8,6 @@
 		<meta property="og:title"		content="mashup"/>
 		<meta property="og:description"	content="mashup generated between"/>
 		<meta property="og:image"		content="thumbnail url"/>
-		<meta property="og:image:width"			content="480"/>
-		<meta property="og:image:height"		content="270"/>
 		<!--	This section can be used to open up the link in the app when the support for it comes
 		<meta property="al:ios:url"				content=""/>
 		<meta property="al:ios:app_store_id"	content="929775122"
@@ -30,16 +28,15 @@
 
 		<!-- Twitter -->
 		<!-- update twitter:card => player upon approval of domain to allow videos to play within twitter-->
-		<meta name="twitter:card"	content="summary"/>
-		<meta name="twitter:url"	content="video source"/>
-		<meta name="twitter:title"	content="mashup"/>
+		<meta name="twitter:card"			content="summary"/>
+		<meta name="twitter:url"			content="video source"/>
+		<meta name="twitter:title"			content="mashup"/>
 		<meta name="twitter:description"	content="mashup generated between"/>
-		<meta name="twitter:image"	content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
-			
-		<meta name="twitter:player" content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-		<!--
+		<meta name="twitter:image"			content="thumbnail url"/>
+		<meta name="twitter:player" 		content="video source"/>
+		<meta name="twitter:player:stream" content="video source"/>
 		<meta name="twitter:player:width"	content="1280"/>
 		<meta name="twitter:player:height"	content="720"/>
-		-->
+		
 	</head>
 </html>
