--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!-- created -->
 <!DOCTYPE html>
 <html>
-<head>
-	<title>reactjs test site</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-</head>
+	<head>
+		<title>reactjs test site</title>
+		<!-- react lib-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    	<script type="text/javascript">
+    	
+    		document.getElementById('head').appendChild('<meta property="og:title" content="mashup"/>');
+    	</script>
+	</head>
+	<body>
+		<div id=guts></div>
+	</body>
 <!--
 <title>Jonathan Ng</title>
 <link rel="stylesheet" type="text/css" href="rsrc/style/main.css"/>
