--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta property="og:site_name">
-		<meta property="og:url"			content=""/>
-		<meta property="og:title"		content="mashup"/>
+	<div id=metatags>
+		<meta property="og:url"			content="http://ngjonathan.me"/>
+		
 		<meta property="og:description"	content="mashup generated between"/>
 		<meta property="og:image"		content="thumbnail url"/>
 		<!--	This section can be used to open up the link in the app when the support for it comes
@@ -21,6 +21,8 @@
 			<meta property="og:video:type"			content="video/mp4"/>	
 			<meta property="og:video:width"			content="960"/>
 			<meta property="og:video:height"		content="720"/>
+	</div>
+		
 		<!-- react lib-->
 		<title>doggo</title>
 		<header>default</header>
