--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
 <!-- created -->
 <!DOCTYPE html>
 <html>
-	<head>
+	<head id=test>
 	<div id=metatags>
-		<meta property="og:url"			content="http://ngjonathan.me"/>
 		
-		<meta property="og:description"	content="mashup generated between"/>
-		<meta property="og:image"		content="thumbnail url"/>
-		<!--	This section can be used to open up the link in the app when the support for it comes
-		<meta property="al:ios:url"				content=""/>
-		<meta property="al:ios:app_store_id"	content="929775122"
-		<meta property="al:ios:app_name"		content="Rave"
-		<meta property="al:android:url"			content=""/>
-		<meta property="al:android:app_name"	content"Rave"/>
-		-->	
-		<meta property="al:web:url"		content="video source"/>		
-		<meta property="og:type"		content="video.other"/>	
-			<meta property="og:video:url"			content="video source"/>
-			<meta property="og:video:secure_url"	content="video source"/>
-			<meta property="og:video:type"			content="video/mp4"/>	
-			<meta property="og:video:width"			content="960"/>
-			<meta property="og:video:height"		content="720"/>
 	</div>
 		
 		<!-- react lib-->
