--- a/twitcrawlmepls.html
+++ b/twitcrawlmepls.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<meta property="og:site_name">
-		<meta property="og:url"			content="http://ngjonathan.me/crawlMe.html"/>
+		<meta property="og:url"			content="http://ngjonathan.me/twitcrawlmepls.html"/>
 		<meta property="og:title"		content="mashup"/>
 		<meta property="og:description"	content="mashup generated between"/>
 		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
