--- a/twitcrawlmepls.html
+++ b/twitcrawlmepls.html
@@ -3,26 +3,33 @@
 <html>
 	<head>
 
-		<meta property="og:site_name">
-		<meta property="og:url"			content="http://ngjonathan.me/twitcrawlmepls.html"/>
-		<meta property="og:title"		content="mashup"/>
-		<meta property="og:description"	content="mashup generated between"/>
-		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
-		<!--	This section can be used to open up the link in the app when the support for it comes
-		<meta property="al:ios:url"				content=""/>
-		<meta property="al:ios:app_store_id"	content="929775122"
-		<meta property="al:ios:app_name"		content="Rave"
-		<meta property="al:android:url"			content=""/>
-		<meta property="al:android:app_name"	content"Rave"/>
-		-->	
-		<meta property="al:web:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>		
-		<meta property="og:type"		content="video.other"/>	
-			<meta property="og:video:url"			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-			<meta property="og:video:secure_url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
-			<meta property="og:video:type"			content="video/mp4"/>	
-			<meta property="og:video:width"			content="960"/>
-			<meta property="og:video:height"		content="720"/>
-		<!-- Twitter -->
+		 <meta property="og:site_name" content="YouTube">
+      <meta property="og:url" content="https://www.youtube.com/watch?v=4C4t_WDrk2g">
+    <meta property="og:title" content="Yassuo | Unranked to Challenger | Episode 13 | A WILD DOM APPEARS">
+    <meta property="og:image" content="https://i.ytimg.com/vi/4C4t_WDrk2g/maxresdefault.jpg">
+
+      <meta property="og:description" content="Remember to leave a like and subscribe for more content! Click the bell to be notified as soon as a video goes live! Follow my stuff! Twitch - http://www.twi...">
+
+    <meta property="al:ios:app_store_id" content="544007664">
+    <meta property="al:ios:app_name" content="YouTube">
+      <meta property="al:ios:url" content="vnd.youtube://www.youtube.com/watch?v=4C4t_WDrk2g&amp;feature=applinks">
+
+      <meta property="al:android:url" content="vnd.youtube://www.youtube.com/watch?v=4C4t_WDrk2g&amp;feature=applinks">
+    <meta property="al:android:app_name" content="YouTube">
+    <meta property="al:android:package" content="com.google.android.youtube">
+    <meta property="al:web:url" content="https://www.youtube.com/watch?v=4C4t_WDrk2g&amp;feature=applinks">
+
+    <meta property="og:type" content="video">
+        <meta property="og:video:url" content="https://www.youtube.com/embed/4C4t_WDrk2g?start=328">
+        <meta property="og:video:secure_url" content="https://www.youtube.com/embed/4C4t_WDrk2g?start=328">
+        <meta property="og:video:type" content="text/html">
+        <meta property="og:video:width" content="1280">
+        <meta property="og:video:height" content="720">
+        <meta property="og:video:url" content="http://www.youtube.com/v/4C4t_WDrk2g?version=3&amp;autohide=1&amp;start=328">
+        <meta property="og:video:secure_url" content="https://www.youtube.com/v/4C4t_WDrk2g?version=3&amp;autohide=1&amp;start=328">
+        <meta property="og:video:type" content="application/x-shockwave-flash">
+        <meta property="og:video:width" content="1280">
+        <meta property="og:video:height" content="720">
 		<meta name="twitter:card"	content="player"/>
 		<meta name="twitter:url"	content="ngjonathan.me/twitcrawlmepls.html"/>
 		<meta name="twitter:title"	content="test scrape from twitter"/>
