--- a/twitcrawlmepls.html
+++ b/twitcrawlmepls.html
@@ -3,84 +3,26 @@
 <html>
 	<head>
 
-		<meta name="title" content="Yassuo | Unranked to Challenger | Episode 13 | A WILD DOM APPEARS">
-
-      <meta name="description" content="Remember to leave a like and subscribe for more content! Click the bell to be notified as soon as a video goes live! Follow my stuff! Twitch - http://www.twi...">
-
-      <meta name="keywords" content="Yasuo, Yassuo, YasuoToChallenger, Challenger, League of Legends, Riot Games, Funny, Voyboy, Trick2G, imaqtpie, Dyrus, stream highlights, doublelift, hi im go...">
-
-<link rel="manifest" href="/manifest.json"><link rel="shortlink" href="https://youtu.be/4C4t_WDrk2g"><link rel="search" type="application/opensearchdescription+xml" href="https://www.youtube.com/opensearch?locale=en_US" title="YouTube Video Search"><link rel="shortcut icon" href="https://s.ytimg.com/yts/img/favicon-vflz7uhzw.ico" type="image/x-icon">     <link rel="icon" href="/yts/img/favicon_32-vfl8NGn4k.png" sizes="32x32"><link rel="icon" href="/yts/img/favicon_48-vfl1s0rGh.png" sizes="48x48"><link rel="icon" href="/yts/img/favicon_96-vfldSA3ca.png" sizes="96x96"><link rel="icon" href="/yts/img/favicon_144-vflWmzoXw.png" sizes="144x144"><meta name="theme-color" content="#e62117">        <link rel="alternate" href="android-app://com.google.android.youtube/http/www.youtube.com/watch?v=4C4t_WDrk2g">
-    <link rel="alternate" href="ios-app://544007664/vnd.youtube/www.youtube.com/watch?v=4C4t_WDrk2g">
-
-      <link rel="alternate" type="application/json+oembed" href="http://www.youtube.com/oembed?url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D4C4t_WDrk2g&amp;format=json" title="Yassuo | Unranked to Challenger | Episode 13 | A WILD DOM APPEARS">
-  <link rel="alternate" type="text/xml+oembed" href="http://www.youtube.com/oembed?url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D4C4t_WDrk2g&amp;format=xml" title="Yassuo | Unranked to Challenger | Episode 13 | A WILD DOM APPEARS">
-
-        <meta property="og:site_name" content="YouTube">
-      <meta property="og:url" content="https://www.youtube.com/watch?v=4C4t_WDrk2g">
-    <meta property="og:title" content="Yassuo | Unranked to Challenger | Episode 13 | A WILD DOM APPEARS">
-    <meta property="og:image" content="https://i.ytimg.com/vi/4C4t_WDrk2g/maxresdefault.jpg">
-
-      <meta property="og:description" content="Remember to leave a like and subscribe for more content! Click the bell to be notified as soon as a video goes live! Follow my stuff! Twitch - http://www.twi...">
-
-    <meta property="al:ios:app_store_id" content="544007664">
-    <meta property="al:ios:app_name" content="YouTube">
-      <meta property="al:ios:url" content="vnd.youtube://www.youtube.com/watch?v=4C4t_WDrk2g&amp;feature=applinks">
-
-      <meta property="al:android:url" content="vnd.youtube://www.youtube.com/watch?v=4C4t_WDrk2g&amp;feature=applinks">
-    <meta property="al:android:app_name" content="YouTube">
-    <meta property="al:android:package" content="com.google.android.youtube">
-    <meta property="al:web:url" content="https://www.youtube.com/watch?v=4C4t_WDrk2g&amp;feature=applinks">
-
-    <meta property="og:type" content="video">
-        <meta property="og:video:url" content="https://www.youtube.com/embed/4C4t_WDrk2g?start=328">
-        <meta property="og:video:secure_url" content="https://www.youtube.com/embed/4C4t_WDrk2g?start=328">
-        <meta property="og:video:type" content="text/html">
-        <meta property="og:video:width" content="1280">
-        <meta property="og:video:height" content="720">
-        <meta property="og:video:url" content="http://www.youtube.com/v/4C4t_WDrk2g?version=3&amp;autohide=1&amp;start=328">
-        <meta property="og:video:secure_url" content="https://www.youtube.com/v/4C4t_WDrk2g?version=3&amp;autohide=1&amp;start=328">
-        <meta property="og:video:type" content="application/x-shockwave-flash">
-        <meta property="og:video:width" content="1280">
-        <meta property="og:video:height" content="720">
-
-        <meta property="og:video:tag" content="Yasuo">
-        <meta property="og:video:tag" content="Yassuo">
-        <meta property="og:video:tag" content="YasuoToChallenger">
-        <meta property="og:video:tag" content="Challenger">
-        <meta property="og:video:tag" content="League of Legends">
-        <meta property="og:video:tag" content="Riot Games">
-        <meta property="og:video:tag" content="Funny">
-        <meta property="og:video:tag" content="Voyboy">
-        <meta property="og:video:tag" content="Trick2G">
-        <meta property="og:video:tag" content="imaqtpie">
-        <meta property="og:video:tag" content="Dyrus">
-        <meta property="og:video:tag" content="stream highlights">
-        <meta property="og:video:tag" content="doublelift">
-        <meta property="og:video:tag" content="hi im gosu">
-        <meta property="og:video:tag" content="gosu">
-        <meta property="og:video:tag" content="faker">
-        <meta property="og:video:tag" content="outplay">
-        <meta property="og:video:tag" content="annie bot">
-        <meta property="og:video:tag" content="iwdowminate">
-        <meta property="og:video:tag" content="dominate">
-        <meta property="og:video:tag" content="bjergsen">
-        <meta property="og:video:tag" content="tsm">
-        <meta property="og:video:tag" content="tyler1">
-        <meta property="og:video:tag" content="best yasuo na">
-        <meta property="og:video:tag" content="best yasuo">
-        <meta property="og:video:tag" content="yasuo god">
-        <meta property="og:video:tag" content="insane yasuo plays">
-        <meta property="og:video:tag" content="crazy yasuo outplays">
-        <meta property="og:video:tag" content="tobias fate">
-        <meta property="og:video:tag" content="tobias">
-        <meta property="og:video:tag" content="Nightblu3">
-        <meta property="og:video:tag" content="hiimgosu">
-        <meta property="og:video:tag" content="lol highlights">
-        <meta property="og:video:tag" content="league highlights">
-        <meta property="og:video:tag" content="twitch">
-        <meta property="og:video:tag" content="gaming">
-        <meta property="og:video:tag" content="yasuo guide">
-        <meta property="og:video:tag" content="unranked to challenger">
+		<meta property="og:site_name">
+		<meta property="og:url"			content="http://ngjonathan.me/twitcrawlme.html"/>
+		<meta property="og:title"		content="mashup"/>
+		<meta property="og:description"	content="mashup generated between"/>
+		<meta property="og:image"		content="https://images-na.ssl-images-amazon.com/images/I/41FS6tvwhkL.jpg"/>
+		<!--	This section can be used to open up the link in the app when the support for it comes
+		<meta property="al:ios:url"				content=""/>
+		<meta property="al:ios:app_store_id"	content="929775122"
+		<meta property="al:ios:app_name"		content="Rave"
+		<meta property="al:android:url"			content=""/>
+		<meta property="al:android:app_name"	content"Rave"/>
+		-->	
+		<meta property="al:web:url"		content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>		
+		<meta property="og:type"		content="video.other"/>	
+			<meta property="og:video:url"			content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
+			<meta property="og:video:secure_url"	content="https://storage.googleapis.com/rave-us-1/Mashups/LVOS_lzgEpQ_RAVE_daPo6q4FXDw/Theme%20and%20Boujee.mp4"/>
+			<meta property="og:video:type"			content="video/mp4"/>	
+			<meta property="og:video:width"			content="960"/>
+			<meta property="og:video:height"		content="720"/>
+		<!-- Twitter -->
 		<meta name="twitter:card"	content="player"/>
 		<meta name="twitter:url"	content="ngjonathan.me/twitcrawlmepls.html"/>
 		<meta name="twitter:title"	content="test scrape from twitter"/>
