--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-<?php 
-$id = $_GET['id'];
-?>
 <!-- created -->
 <!DOCTYPE html>
 <html>
 	<head id=test>
 	<div id=metatags>
-		
+		<title>NgKJon</title>
 	</div>
-		
-		<!-- react lib-->
-		<title>doggo</title>
-		<header>default</header>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    	<script src="js/home.js">
-    	</script>
+	<div id="nav">
+		<ul>
+			<li href=".">Main</li>
+			<li href="/projects.html">Projects</li>
+			<li href="/work.html">Work History</li>
+			<li  href="/kanban.html">Board</li>
+			<li href="/contact.html">Contact</li>
+
+		</ul>
+	</div>
 	</head>
 	<body>
 		<div id=guts></div>
