--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!-- created -->
 <!DOCTYPE html>
+<!test>
 <html>
 	<head id=test>
-	<div id=metatags>
 		<title>NgKJon</title>
-	</div>
-	<div id="nav">
-		<ul>
-			<li href=".">Main</li>
-			<li href="/projects.html">Projects</li>
-			<li href="/work.html">Work History</li>
-			<li  href="/kanban.html">Board</li>
-			<li href="/contact.html">Contact</li>
+		<div id=metatags>
+			
+		</div>
+		<div id="nav">
+			<ul>
+				<li><a href="index.html">Main</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="work.html">Work History</a></li>
+				<li><a href="kanban.html">Board</a></li>
+				<li><a href="contact.html">Contact</a></li>
 
-		</ul>
-	</div>
+			</ul>
+		</div>
 	</head>
 	<body>
-		<div id=guts></div>
+		
 		
 	</body>
 
