--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <html>
 	<head>
     <link rel="stylesheet" href="core.css">
-    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+    <link rel="stylesheet" type="text/css" href="js/jquery.fullPage.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
-    <script src="vendors/jquery.easings.min.js"></script>
+    <script src="js/vendors/jquery.easings.min.js"></script>
 
 
     <!-- This following line is only necessary in the case of using the option `scrollOverflow:true` -->
-    <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
+    <script type="text/javascript" src="js/vendors/scrolloverflow.min.js"></script>
 
-    <script type="text/javascript" src="jquery.fullPage.js"></script>
+    <script type="text/javascript" src="js/jquery.fullPage.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
         $('#fullpage').fullpage({
