--- a/index.html
+++ b/index.html
@@ -64,19 +64,18 @@
                 </li>
               </ul>
             </div>
-            <p>this is a test body for section 1</p>
+            <p>Just a student with a passion for design and software</p>
           </div>
 
           <div class="section">
             <h1>Skills</h2>
-            <ul>
+            <ul id="skills">
               <li>languages: Java, C++, Python, Scala, HTML/CSS, PBasic, Bash, Groovy</li>
               <li>technologies: Git, PostgreSQL, Solr, Redis, Google Cloud Datastore, Jenkins, Nexus, Sonarqube, Sonatype, Veracode, Atlassian toolstack, Eclipse, Vim </li>
             </ul>
           </div>
           <div class="section">
             <h1>Projects</h1>
-            2 section
             <div class="slide">
               <h2>Receipt Analytics</h2>
             </div>
