--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head>
     <link rel="stylesheet" href="core.css">
     <link rel="stylesheet" type="text/css" href="js/jquery.fullPage.css" />
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
@@ -77,7 +78,21 @@
           <div class="section">
             <h1>Projects</h1>
             <div class="slide">
-              <h2>Receipt Analytics</h2>
+              <div class="container">
+                <h2>Receipt Analytics</h2>
+                <div class="row">
+                <div class="col-sm-6">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-6">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+              </div>
+              </div>
             </div>
             <div class="slide">
               <h2>Maze Solving Robot</h2>
@@ -94,10 +109,13 @@
           </div>
           <div class="section">
             <h1>Work</h1>
-            3 section
-          </div>
-          <div class="section">
-            4 section
+            <div class="slide">
+              <h2>TD Bank</h2>
+            </div>
+            <div class="slide">
+              <h2>Rave Media Inc.</h2>
+            </div>
+
           </div>
     </div>
 		
