--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://ngkjon.github.io/portfolio" />
+    <!-- <meta http-equiv="Refresh" content="0; url=https://ngkjon.github.io/portfolio" /> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  
+  <body>
+    <h1>jonathan ng
+    </h1>
+    <div class=navbar></div>
+    <div class=bar>
+  </div>
+  	<h2>designer & developer based in toronto
+  	studying at the university of waterloo</h2>
+  </body>
 </html>
