added pages and verticle allignment navbar

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
-  <body>
+  <body id=home>
     <div class=title>jonathan ng</div>
     <div class=navbar>
       <ul>
-        <li><a href="about.html">about</a></li>
-        <li><a href="work.html">work</a></li>
         <li><a href="https://www.dropbox.com/s/uhxfgsk108odrl5/design3B.pdf">resume</a></li>
+        <li><a href="work.html">work</a></li>
+        <li><a href="about.html">about</a></li>
       </ul> 
     </div>
     <div class=bar></div>
