--- a/work.html
+++ b/work.html
@@ -2,6 +2,8 @@
   <head>
     <!-- <meta http-equiv="Refresh" content="0; url=https://ngkjon.github.io/portfolio" /> -->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <title>jonathan ng - work</title>
+
   </head>
   
   <body>
